allow p and ul in editorial overlay, add overlap header variant for content-page grid. remove btn-label and btn-link-accent remove border bottom on tabs use correct home link in breadcrumbs

--- a/scss/components/navigation.scss
+++ b/scss/components/navigation.scss
@@ -289,7 +289,7 @@
         padding: 1rem;
 
         &.in, &.active {
-            border-bottom: 1px solid #DDDDDD;
+           // border-bottom: 1px solid #DDDDDD;
         }
     }
 
